Change criteria -> criterion

--- a/Angular/app/DecisionForm/Templates/dfCriterionTemplate.html
+++ b/Angular/app/DecisionForm/Templates/dfCriterionTemplate.html
@@ -4,7 +4,7 @@
         <label for="name" class="col-sm-3 control-label">Name</label>
         <div class="col-sm-9">
             <input type="text" id="name" name="name" class="form-control"
-                   ng-model="editableCriteria.name" />
+                   ng-model="editableCriterion.name" />
         </div>
     </div>
 
@@ -12,7 +12,7 @@
         <label for="rate" class="col-sm-3 control-label">Rate</label>
         <div class="col-sm-9">
             <input type="text" id="rate" name="rate" class="form-control"
-                   ng-model="editableCriteria.rate" />
+                   ng-model="editableCriterion.rate" />
         </div>
     </div>
 
@@ -20,7 +20,7 @@
         <input type="button" class="btn btn-default" value="Cancel"
                ng-click="cancelForm()" />
         <input type="submit" class="btn btn-primary" value="Submit"
-               ng-click="submitCriteriaForm()" />
+               ng-click="submitCriterionForm()" />
     </div>
 
 </form>
