--- a/Angular/app/DecisionForm/Templates/dfValueTemplate.html
+++ b/Angular/app/DecisionForm/Templates/dfValueTemplate.html
@@ -4,7 +4,7 @@
         <label for="value" class="col-sm-3 control-label">Value</label>
         <div class="col-sm-9">
             <input type="text" id="value" name="value" class="form-control"
-                   ng-model="updatedCriteria.criteria.value" />
+                   ng-model="updatedCriterion.criterion.value" />
         </div>
     </div>
 
@@ -12,7 +12,7 @@
         <label for="valueRate" class="col-sm-3 control-label">Rate</label>
         <div class="col-sm-9">
             <input type="text" id="valueRate" name="valueRate" class="form-control"
-                   ng-model="updatedCriteria.criteria.valueRate" />
+                   ng-model="updatedCriterion.criterion.valueRate" />
         </div>
     </div>
 
@@ -20,7 +20,7 @@
         <input type="button" class="btn btn-default" value="Cancel"
                ng-click="cancelForm()" />
         <input type="submit" class="btn btn-primary" value="Submit"
-               ng-click="submitCriteriaValueForm()" />
+               ng-click="submitCriterionValueForm()" />
     </div>
 
 </form>
