--- a/WebApp/Areas/HelpPage/Views/Help/DisplayTemplates/Parameters.cshtml
+++ b/WebApp/Areas/HelpPage/Views/Help/DisplayTemplates/Parameters.cshtml
@@ -1,4 +1,4 @@
-@using System.Collections.Generic
+﻿@using System.Collections.Generic
 @using System.Collections.ObjectModel
 @using System.Web.Http.Description
 @using System.Threading
@@ -9,7 +9,7 @@
 {
     <table class="help-page-table">
         <thead>
-            <tr><th>Name</th><th>Description</th><th>Type</th><th>Additional information</th></tr>
+            <tr><th>Имя</th><th>Описание</th><th>Тип</th><th>Дополнительная информация</th></tr>
         </thead>
         <tbody>
             @foreach (ParameterDescription parameter in Model)
@@ -33,7 +33,7 @@
                         }
                         else
                         {
-                            <p>None.</p>
+                            <p>Нет.</p>
                         }
                     </td>
                 </tr>
@@ -43,6 +43,6 @@
 }
 else
 {
-    <p>None.</p>
+    <p>Нет.</p>
 }
 
