--- a/WebApp/Views/Home/_Home.cshtml
+++ b/WebApp/Views/Home/_Home.cshtml
@@ -1,8 +1,8 @@
 ﻿<!-- ko with: home -->
 <div class="jumbotron">
     <h1>Decision</h1>
-    <p class="lead">Build up your decision tree and submit it to get result</p>
-    <p>@Html.ActionLink("Help", "Index", "Help", new { area = "HelpPage" }, null)</p>
+    <p class="lead">Построй своё дерево решения и нажми кнопку "Подтвердить"</p>
+    <p>@Html.ActionLink("Помощь", "Index", "Help", new { area = "HelpPage" }, null)</p>
 </div>
 
 <div class="container">
