--- a/WebApp/app/DecisionForm/Templates/dfCriterionTemplate.html
+++ b/WebApp/app/DecisionForm/Templates/dfCriterionTemplate.html
@@ -1,7 +1,7 @@
 ﻿<form class="form-horizontal" role="form">
 
     <div class="form-group">
-        <label for="name" class="col-sm-3 control-label">Name</label>
+        <label for="name" class="col-sm-3 control-label">Имя Критерия:</label>
         <div class="col-sm-9">
             <input type="text" id="name" name="name" class="form-control"
                    ng-model="editableCriterion.name" />
@@ -9,7 +9,7 @@
     </div>
 
     <div class="form-group">
-        <label for="rate" class="col-sm-3 control-label">Rate</label>
+        <label for="rate" class="col-sm-3 control-label">Рейтинг критерия:</label>
         <div class="col-sm-9">
             <input type="text" id="rate" name="rate" class="form-control"
                    ng-model="editableCriterion.rate" />
@@ -17,9 +17,9 @@
     </div>
 
     <div class="col-sm-offset-3 col-sm-9">
-        <input type="button" class="btn btn-default" value="Cancel"
+        <input type="button" class="btn btn-default" value="Отменить"
                ng-click="cancelForm()" />
-        <input type="submit" class="btn btn-primary" value="Submit"
+        <input type="submit" class="btn btn-primary" value="Подтвердить"
                ng-click="submitCriterionForm()" />
     </div>
 
