--- a/WebApp/app/DecisionForm/Templates/dfDecisionObjectTemplate.html
+++ b/WebApp/app/DecisionForm/Templates/dfDecisionObjectTemplate.html
@@ -1,17 +1,17 @@
 ﻿<form class="form-horizontal" role="form">
 
     <div class="form-group">
-        <label for="name" class="col-sm-3 control-label">Name</label>
+        <label for="name" class="col-sm-3 control-label">Имя объекта решения:</label>
         <div class="col-sm-9">
-            <input type="text" id="name" name="name" class="form-control"
+            <input type="text" id="name" name="Имя объекта:" class="form-control"
                    ng-model="editableDecisionObject.name" />
         </div>
     </div>
 
     <div class="col-sm-offset-3 col-sm-9">
-        <input type="button" class="btn btn-default" value="Cancel"
+        <input type="button" class="btn btn-default" value="Отменить"
                ng-click="cancelForm()" />
-        <input type="submit" class="btn btn-primary" value="Submit"
+        <input type="submit" class="btn btn-primary" value="Подтвердить"
                ng-click="submitDecisionObjectForm()" />
     </div>
 
