Added instruction on Help Page

--- a/WebApp/Areas/HelpPage/Views/Help/Index.cshtml
+++ b/WebApp/Areas/HelpPage/Views/Help/Index.cshtml
@@ -1,4 +1,4 @@
-@using System.Web.Http
+﻿@using System.Web.Http
 @using System.Web.Http.Controllers
 @using System.Web.Http.Description
 @using System.Collections.ObjectModel
@@ -25,8 +25,9 @@
         <div class="content-wrapper">
             <h2>Introduction</h2>
             <p>
-                Provide a general description of your APIs here.
+                Здесь представлена информация об API системы. Система разрабатывалась в рамках дипломного проекта. Для получения представления использования системы перейдите по ссылке.
             </p>
+            <a href="~/app/inst.pdf">Link</a>
         </div>
     </section>
     <section class="content-wrapper main-content clear-fix">
